--- a/templates/core/components/contact.html
+++ b/templates/core/components/contact.html
@@ -5,28 +5,32 @@
         <div class="max-w-5xl mx-auto px-6 sm:px-6 lg:px-8">
             <div class="bg-gray-900 w-full shadow rounded p-8 sm:p-12 -mt-72">
                 <p class="text-3xl font-bold leading-7 text-center text-white">Contact me</p>
-                <form action="" method="post">
-
+    
+    
+                <!-- Form -->
+                <form action="" method="post" id="form_contact">
+                    {% csrf_token %}
+    
+    
                     <div class="md:flex items-center mt-12">
                         <div class="w-full flex flex-col">
-                            <label class="font-semibold leading-none text-gray-300">your Mail</label>
-                            <input type="mail"
-                                class="leading-none text-gray-50 p-3 focus:outline-none focus:border-blue-700 mt-4 border-0 bg-gray-800 rounded" />
+                            <label class="font-semibold leading-none text-gray-300">Your mail</label>
+    
+                            {{ form.from_email }}
+    
                         </div>
                     </div>
                     <div class="md:flex items-center mt-12">
                         <div class="w-full flex flex-col">
-                            <label class="font-semibold leading-none text-gray-300">your Mail</label>
-                            <input type="text"
-                                class="leading-none text-gray-50 p-3 focus:outline-none focus:border-blue-700 mt-4 border-0 bg-gray-800 rounded" />
+                            <label class="font-semibold leading-none text-gray-300">Subject</label>
+                            {{ form.subject }}
                         </div>
                     </div>
-
+    
                     <div>
                         <div class="w-full flex flex-col mt-8">
                             <label class="font-semibold leading-none text-gray-300">Message</label>
-                            <textarea type="text"
-                                class="h-40 text-base leading-none text-gray-50 p-3 focus:outline-none focus:border-blue-700 mt-4 bg-gray-800 border-0 rounded"></textarea>
+                            {{ form.message }}
                         </div>
                     </div>
                     <div class="flex items-center justify-center w-full">
@@ -39,4 +43,11 @@
             </div>
         </div>
     </div>
+    
+    <script>
+        const form_contact = document.querySelector("#form_contact")
+        for (var field in form_contact) {
+            form_contact[field].classList.add("leading-none", "text-gray-50", "p-3", "focus:outline-none", "focus:border-blue-700", "mt-4", "border-0", "bg-gray-800", "rounded")
+        }
+    </script>
     <!-- End Contact -->
