--- a/templates/core/components/exp.html
+++ b/templates/core/components/exp.html
@@ -1,6 +1,6 @@
 <!-- expereiencia -->
-<div class="mx-36 my-32" id="exp">
-  <div class="container flex justify-center mx-auto">
+<div class="mx-10 md:mx-36 " id="exp">
+  <div class="container flex justify-center mx-auto  mt-32">
     <div class="my-12">
       <h1 class="text-gray-50 text-5xl text-center pb-3">Experiencia:</h1>
       <p class="xl:text-3xl text-2xl text-center text-gray-300 pb-6 sm:w-4/6 w-5/6 mx-auto">
