--- a/templates/core/components/projects.html
+++ b/templates/core/components/projects.html
@@ -1,7 +1,7 @@
 <!-- Proyectos -->
 
-<div class="my-32 mx-auto" id="projects">
-    <div class="container flex justify-center mx-auto">
+<div class="mx-auto" id="projects">
+    <div class="container flex justify-center mx-auto  mt-32">
         <div class="my-8">
             <h1 class="text-gray-50 text-5xl text-center pb-3">Projects</h1>
             <p class="xl:text-3xl text-2xl text-center text-gray-300 pb-6 sm:w-4/6 w-5/6 mx-auto">
